tests/macros/multi_select/validate_on_key.rs
fn main() {
    requestty::questions![MultiSelect { validate_on_key: todo!() }];
}
